# pomoTask

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh
src/: api.rs  app.rs  events.rs  handler.rs  main.rs  test_path.rs  ui.rs
src/app/: i18n.rs  mod.rs
src/ui/: calendar.rs  list.rs  mod.rs  modals.rs  palette.rs  timer.rs
