[package]
name = "pomotask-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.26.1", features = ["all-widgets"] }
crossterm = { version = "0.27.0", features = ["events"] }
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
chrono = "0.4.38"
color-eyre = "0.6.3"
futures = "0.3.30"
tokio-stream = "0.1.15"
itertools = "0.13.0"
google-tasks1 = "5.0.5"
yup-oauth2 = "9.0.0"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.25"
qr2term = "0.3.1"
async-trait = "0.1"
open = "5.1.2"
arboard = "3.4.0"
notify-rust = "4.11.0"
dirs = "5.0.1"
rand = "0.8.5"
